--- a/test/vcr_cassettes/drug-search-not-found.yml
+++ b/test/vcr_cassettes/drug-search-not-found.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.fda.gov/drug/label.json?search=inactive_ingredient:synthroid
+    uri: https://api.fda.gov/drug/label.json?search=inactive_ingredient:%22synthroid%22
     body:
       encoding: US-ASCII
       string: ''
@@ -31,7 +31,7 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Wed, 13 Jan 2016 22:13:54 GMT
+      - Thu, 14 Jan 2016 21:05:44 GMT
       Etag:
       - W/"50-2KZCzYkFAmWiD++CDYhbLw"
       Server:
@@ -62,5 +62,5 @@ http_interactions:
           }
         }
     http_version: 
-  recorded_at: Wed, 13 Jan 2016 22:13:54 GMT
+  recorded_at: Thu, 14 Jan 2016 21:05:44 GMT
 recorded_with: VCR 3.0.0
