--- a/test/vcr_cassettes/drug_name.yml
+++ b/test/vcr_cassettes/drug_name.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.fda.gov/drug/label.json?search=inactive_ingredient:b
+    uri: https://api.fda.gov/drug/label.json?search=inactive_ingredient:%22b%22
     body:
       encoding: US-ASCII
       string: ''
@@ -23,7 +23,7 @@ http_interactions:
       Access-Control-Allow-Origin:
       - "*"
       Age:
-      - '0'
+      - '1'
       Cache-Control:
       - public, max-age=60
       Content-Security-Policy:
@@ -31,7 +31,7 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Tue, 12 Jan 2016 21:52:14 GMT
+      - Thu, 14 Jan 2016 21:05:48 GMT
       Etag:
       - W/"129e-veMeyqceFMnNfiTXRPQGBQ"
       Server:
@@ -41,17 +41,17 @@ http_interactions:
       - Accept-Encoding
       - Accept-Encoding
       Via:
-      - http/1.1 api-umbrella (ApacheTrafficServer [cSsSfU])
+      - http/1.1 api-umbrella (ApacheTrafficServer [cHs f ])
       X-Cache:
-      - MISS
+      - HIT
       X-Content-Type-Options:
       - nosniff
       X-Frame-Options:
       - deny
       X-Xss-Protection:
       - 1; mode=block
-      Transfer-Encoding:
-      - chunked
+      Content-Length:
+      - '1917'
       Connection:
       - keep-alive
     body:
@@ -149,7 +149,7 @@ http_interactions:
           ]
         }
     http_version: 
-  recorded_at: Tue, 12 Jan 2016 21:52:14 GMT
+  recorded_at: Thu, 14 Jan 2016 21:05:48 GMT
 - request:
     method: get
     uri: https://rxnav.nlm.nih.gov/REST/rxcui/701961/status.json
@@ -169,7 +169,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Tue, 12 Jan 2016 21:52:14 GMT
+      - Thu, 14 Jan 2016 21:05:48 GMT
       Server:
       - Apache-Coyote/1.1
       Content-Type:
@@ -183,5 +183,5 @@ http_interactions:
       string: '{"rxcuiStatus":{"status":"Active","remappedDate":"","minConceptGroup":{"minConcept":[{"rxcui":"701961","name":"Camphor
         62 MG/ML Inhalant Solution","tty":"SCD"}]}}}'
     http_version: 
-  recorded_at: Tue, 12 Jan 2016 21:52:15 GMT
+  recorded_at: Thu, 14 Jan 2016 21:05:48 GMT
 recorded_with: VCR 3.0.0
