--- a/test/vcr_cassettes/drug-search-not-found.yml
+++ b/test/vcr_cassettes/drug-search-not-found.yml
@@ -8,7 +8,7 @@ http_interactions:
       string: ''
     headers:
       User-Agent:
-      - Hurley v0.2
+      - Faraday v0.9.2
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -31,7 +31,7 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 14 Jan 2016 21:05:44 GMT
+      - Tue, 19 Jan 2016 17:51:11 GMT
       Etag:
       - W/"50-2KZCzYkFAmWiD++CDYhbLw"
       Server:
@@ -39,7 +39,7 @@ http_interactions:
       Vary:
       - Accept-Encoding
       Via:
-      - http/1.1 api-umbrella (ApacheTrafficServer [cMsSfW])
+      - http/1.1 api-umbrella (ApacheTrafficServer [cSsSfU])
       X-Cache:
       - MISS
       X-Content-Type-Options:
@@ -62,5 +62,5 @@ http_interactions:
           }
         }
     http_version: 
-  recorded_at: Thu, 14 Jan 2016 21:05:44 GMT
+  recorded_at: Tue, 19 Jan 2016 17:51:11 GMT
 recorded_with: VCR 3.0.0
