--- a/test/vcr_cassettes/non-gf-drug-search-integration-test.yml
+++ b/test/vcr_cassettes/non-gf-drug-search-integration-test.yml
@@ -8,7 +8,7 @@ http_interactions:
       string: ''
     headers:
       User-Agent:
-      - Hurley v0.2
+      - Faraday v0.9.2
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -31,9 +31,9 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Thu, 14 Jan 2016 21:17:49 GMT
+      - Tue, 19 Jan 2016 17:51:05 GMT
       Etag:
-      - W/"118e-AalloG1o6KZSDzF7vwbD9Q"
+      - W/"118e-zzWPHonjJclTtBmPnqdcEg"
       Server:
       - openresty
       Vary:
@@ -61,7 +61,7 @@ http_interactions:
           "meta": {
             "disclaimer": "openFDA is a beta research project and not for clinical use. While we make every effort to ensure that data is accurate, you should assume all results are unvalidated.",
             "license": "http://open.fda.gov/license",
-            "last_updated": "2016-01-07",
+            "last_updated": "2016-01-14",
             "results": {
               "skip": 0,
               "limit": 1,
@@ -156,7 +156,7 @@ http_interactions:
           ]
         }
     http_version: 
-  recorded_at: Thu, 14 Jan 2016 21:17:49 GMT
+  recorded_at: Tue, 19 Jan 2016 17:51:05 GMT
 - request:
     method: get
     uri: https://rxnav.nlm.nih.gov/REST/rxcui/1483335/status.json
@@ -165,7 +165,7 @@ http_interactions:
       string: ''
     headers:
       User-Agent:
-      - Hurley v0.2
+      - Faraday v0.9.2
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -176,7 +176,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Thu, 14 Jan 2016 21:17:49 GMT
+      - Tue, 19 Jan 2016 17:51:05 GMT
       Server:
       - Apache-Coyote/1.1
       Content-Type:
@@ -190,5 +190,5 @@ http_interactions:
       string: '{"rxcuiStatus":{"status":"Active","remappedDate":"","minConceptGroup":{"minConcept":[{"rxcui":"1483335","name":"dimethicone
         30 MG/ML / Glycerin 300 MG/ML Topical Cream","tty":"SCD"}]}}}'
     http_version: 
-  recorded_at: Thu, 14 Jan 2016 21:17:50 GMT
+  recorded_at: Tue, 19 Jan 2016 17:51:05 GMT
 recorded_with: VCR 3.0.0
